--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <!-- Hero section with scroll indicator -->
             <div class="hero" id="section1">
                 <h1 class="fade">Hi! I'm Kevin, nice to meet you</h1>
-                <h1 class="fade">I'm a Multimedia student from <a href="https://www.citm.upc.edu/cat/estudis/grau-multimedia-ext/"><i>CITM</i></a>, Barcelona</h1>
+                <h1 class="fade">I'm a Multimedia student from <a href="https://www.citm.upc.edu/cat/estudis/grau-multimedia-ext/" target="_blank"><i>CITM</i></a>, Barcelona</h1>
                 <div class="scroll-indicator"></div>
             </div>
     
@@ -54,12 +54,12 @@
                 <div class="left-column">
                     <h2>I love videogames</h2>
                     <p>And I love developing them too! I have participated in several team projects and worked in different roles.</p>
-                    <p>Winner of 2022 <a href="https://www.citm.upc.edu/blog/giravolt-crea-lab-el-nou-laboratori-dinnovacio-digital-del-citm/?lang=ca"><b>Giravolt x CITM hackathon</b></a>,<br/> best idea for a VR project</p>
-                    <p><a href="https://kolageno.itch.io"><b>Celery</b></a> - 2024 Project by Kolageno Team</p>
+                    <p>Winner of 2022 <a href="https://www.citm.upc.edu/blog/giravolt-crea-lab-el-nou-laboratori-dinnovacio-digital-del-citm/?lang=ca" target="_blank"><b>Giravolt x CITM hackathon</b></a>,<br/> best idea for a VR project</p>
+                    <p><a href="https://kolageno.itch.io" target="_blank"><b>Celery</b></a> - 2024 Project by Kolageno Team</p>
                     <div class="links-container" data-gallery="1">
                         <a data-image="img/hackaton2.png" href="pages/design.html">Design</a>
                         <a data-image="img/ui_giravolt.png" href="pages/user_interface.html">User Interface</a>
-                        <a data-image="image3.jpg">Code</a>
+                        <a data-image="">Code</a>
                         <a data-image="img/music1.png" href="pages/music.html">Music</a>
                     </div>
                 </div>
@@ -72,9 +72,9 @@
                     <h2>I am a Web Developer</h2>
                     <p>I have experience in designing user-centered web pages, as well as developing both front-end and back-end solutions.</p>
                     <div class="links-container" data-gallery="2">
-                        <a data-image="img/giravolt1.jpg">User Centered Design</a>
-                        <a data-image="img/giravolt2.jpg">HTML, CSS and JavaScript</a>
-                        <a data-image="img/giravolt1.jpg">Data bases and php</a>
+                        <a data-image="">User Centered Design</a>
+                        <a data-image="">HTML, CSS and JavaScript</a>
+                        <a data-image="">Data bases and php</a>
                     </div>
                 </div>
                 <div class="right-column">
@@ -85,13 +85,13 @@
                 <div class="left-column">
                     <h2>I do other stuff!</h2>
                     <div class="links-container" data-gallery="3">
-                        <a data-image="image22.jpg">Visual identity Guide</a>
-                        <a data-image="image23.jpg">Magazine design</a>
-                        <a data-image="image34.jpg">3D Animation</a>
+                        <a data-image="img/identity_guide1.png" href="pages/visual_identity.html">Visual identity Guide</a>
+                        <a data-image="img/magazine1.png" href="pages/magazine.html">Magazine design</a>
+                        <a data-image="img/walk2.png" href="pages/animation.html">3D Animation</a>
                     </div>
                 </div>
                 <div class="right-column">
-                    <img id="display-image3" src="" alt="Display" />
+                    <img id="display-image3" src="img/walk2.png" alt="Display" />
                 </div>
             </div>
         </div>
