--- a/pages/music.html
+++ b/pages/music.html
@@ -45,21 +45,22 @@
             <div id="section1" class="content">
                 <div class="left-column">
                     <h2>Celery Soundtrack</h2>
-                    <p><a href="https://kolageno.itch.io"><b>Celery</b></a> is a goofy and frenetic dungeon crawler with an unique narrative.<p/>
+                    <p><a href="https://kolageno.itch.io" target="_blank"><b>Celery</b></a> is a goofy and frenetic dungeon crawler with an unique narrative.<p />
                     <p>During the concept discovery, some idea for the soundtrack were established.</p>
                     <p>Using self-taught knowledge about daw and digital music creation, a teammate and I were able to compose five original tracks for our game (+trailer rearrangement).</p>
                 </div>
                 <div class="right-column">
                     <iframe width="560" height="315" style="border-radius: 10px;" src="https://www.youtube.com/embed/Z-6OPU_2K6Q?si=kbqV_af3vgSoQJlk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
+                <div class="scroll-indicator"></div>
             </div>
             <div id="section2" class="content">
                 <div class="left-column">
                     <div class="links-container" data-gallery="1">
                         <h2>Celery Soundtrack</h2>
-                        <a data-image="../img/ui_celery1.png" href="https://on.soundcloud.com/Vb4fBWvSVx2sec5j6"><iframe width="100%" height="120" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1921544564%3Fsecret_token%3Ds-cgLYZU7kg7A&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe></a>
-                        <a data-image="../img/celery_gameplay_1.png" href="https://on.soundcloud.com/Vb4fBWvSVx2sec5j6"><iframe width="100%" height="120" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1921544534%3Fsecret_token%3Ds-jMQpqJwxw9a&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe></a>
-                        <a data-image="../img/celery_gameplay_2.png" href="https://on.soundcloud.com/Vb4fBWvSVx2sec5j6"><iframe width="100%" height="120" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1921544546%3Fsecret_token%3Ds-aVECc6env0X&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe></a>
+                        <a data-image="../img/ui_celery1.png" href="https://on.soundcloud.com/Vb4fBWvSVx2sec5j6" target="_blank"><iframe width="100%" height="120" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1921544564%3Fsecret_token%3Ds-cgLYZU7kg7A&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe></a>
+                        <a data-image="../img/celery_gameplay_1.png" href="https://on.soundcloud.com/Vb4fBWvSVx2sec5j6" target="_blank"><iframe width="100%" height="120" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1921544534%3Fsecret_token%3Ds-jMQpqJwxw9a&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe></a>
+                        <a data-image="../img/celery_gameplay_2.png" href="https://on.soundcloud.com/Vb4fBWvSVx2sec5j6" target="_blank"><iframe width="100%" height="120" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1921544546%3Fsecret_token%3Ds-aVECc6env0X&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe></a>
                     </div>
                 </div>
                 <div class="right-column">
