--- a/pages/user_interface.html
+++ b/pages/user_interface.html
@@ -45,18 +45,19 @@
             <div id="section1" class="content">
                 <div class="left-column">
                     <h2>Giravolt development</h2>
-                    <p>During the development of the game Masks&Marquises - not released, our team reamVR (former POSTIT), continued the design progress started in <a href="https://www.citm.upc.edu/blog/giravolt-crea-lab-el-nou-laboratori-dinnovacio-digital-del-citm/?lang=ca"><b>Giravolt x CITM hackaton</b></a> <p/>
+                    <p>During the development of the game Masks&Marquises - not released, our team reamVR (former POSTIT), continued the design progress started in <a href="https://www.citm.upc.edu/blog/giravolt-crea-lab-el-nou-laboratori-dinnovacio-digital-del-citm/?lang=ca" target="_blank"><b>Giravolt x CITM hackaton</b></a> <p />
                     <p>Furthermore, we were responsible for the design of the user interface, specifically the menu, in three languages: English, Catalan and Spanish</p>
                     <p>I additionally played a key role in the localization efforts within Unity, as well as enhancing the navigation functionality.</p>
                 </div>
                 <div class="right-column">
                     <img src="../img/ui_giravolt.png" alt="User Interface Giravolt" />
                 </div>
+                <div class="scroll-indicator"></div>
             </div>
             <div id="section2" class="content">
                 <div class="left-column">
                     <h2>Celery UI Integration</h2>
-                    <p>In contrast to the previous project, in <a href="https://kolageno.itch.io"><b>Celery</b></a> I was in charge of implementing, among others, the UI to Unity.</p>
+                    <p>In contrast to the previous project, in <a href="https://kolageno.itch.io" target="_blank"><b>Celery</b></a> I was in charge of implementing, among others, the UI to Unity.</p>
                     <p>My tasks include UI scripting, user settings, UI navigation, HUD processes and scene management.</p>
                     <p>I provided to the game features such as localization in three languages, audio and video settings, gameplay settings such as aim sensibility, and save and load system.</p>
                 </div>
