download pdf test

--- a/pages/visual_identity.html
+++ b/pages/visual_identity.html
@@ -73,7 +73,11 @@
                     <h2>Project result</h2>
                 </div>
                 <div class="right-column">
-                    <embed src="../docs/Qiu_Kevin_Practica05.pdf" width="100%" height="100%" type="application/pdf" style="margin-right: 7%">
+                    <object data="../docs/Qiu_Kevin_Practica05.pdf" type="application/pdf" width="100%" height="100%" style="margin-right: 7%">
+                        <p>Your web browser doesn't have a PDF plugin.
+                        Instead you can <a href="../docs/Qiu_Kevin_Practica05.pdf">click here to
+                        download the PDF file.</a></p>
+                      </object>
                 </div>
             </div>
         </div>
