responsive and movil

--- a/pages/design.html
+++ b/pages/design.html
@@ -46,9 +46,7 @@
                 <div class="left-column">
                     <h2>Giravolt x CITM hackaton</h2>
                     <p><a href="https://www.citm.upc.edu/blog/giravolt-crea-lab-el-nou-laboratori-dinnovacio-digital-del-citm/?lang=ca" target="_blank"><b>Giravolt</b></a> is an initiative from la Generalitat, in collaboration with CITM, that aims to protect and promote Catalan heritage using virtual reality (VR) and other immersive environments.</p>
-                    <p>As part of this project, historical Catalan sites and artifacts were scanned and turned into 3D models to preserve them for future generations.</p>
                     <p>A Hackathon was held where teams of around 4 people brainstormed projects to promote and conserve Catalonia's cultural heritage. Our team's idea was selected from 9 others to be developed in early 2023.</p>
-                    <p>As a game designer in this project, I proposed using virtual reality to create an interactive experience based on the traditional "wolf" game.</p>
                     <p>Our idea allowed players to use avatars based on historical objects and engage with cultural heritage through immersive gameplay.</p>
                     <p><a href="https://x.com/patrimonigencat/status/1597633298330968071?cxt=HHwWjoDTxaXB96ssAAAA" target="_blank"><b>Hackaton Giravolt Crea Lab - POSTIT team</b></a></p>
                 </div>
@@ -75,7 +73,7 @@
                     <p><a href="https://kolageno.itch.io" target="_blank"><b>Celery</b></a> is an idea created from scratch by team Kolageno.</p>
                     <p>This videogame is a linear dungeon crawler that features an original combat system based on using the enemies themselves as weapons.</p>
                     <p>Combined with an interactive environment, the player is given the possibility of facing each challenge creatively.</p>
-                    <p>Note: This is a team project, not all content is mine.</p>
+                    <p>Note: This is a team project.</p>
                     <div class="links-container" data-gallery="1">
                         <a data-image="../img/design1.png">Brainstorming</a>
                         <a data-image="../img/design2.png">References</a>
