--- a/pages/visual_identity.html
+++ b/pages/visual_identity.html
@@ -47,9 +47,8 @@
                     <h2>Visual Identity Project</h2>
                     <p>This project consists in creating a brand for an energy drink given a brief.</p>
                     <p>The exercise includes creating a name and logo, visual identity, and an example of its application.</p>
-                    <p>It aims to develop skills in analyzing and creating graphic content for brand communication<p />
                     <p>The brief outlines the creation of a new energy drink brand targeting active, health-conscious consumers (18-40 years) interested in extreme sports.</p>
-                    <p>Using my branding knowledge, I designed a visual identity that aligns with the target audience's lifestyle and effectively communicates the brand's energy and values.</p>
+                    <p>My job was designing a visual identity that aligns with the target audience's lifestyle and effectively communicates the brand's energy and values.</p>
                 </div>
                 <div class="right-column">
                     <div id="slider-container">
