done things very much

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="links-container" data-gallery="1">
                         <a data-image="img/hackaton2.png" href="pages/design.html">Design</a>
                         <a data-image="img/ui_giravolt.png" href="pages/user_interface.html">User Interface</a>
-                        <a data-image="">Code</a>
+                        <a data-image="img/code9.png" href="pages/videogame_code.html">Code</a>
                         <a data-image="img/music1.png" href="pages/music.html">Music</a>
                     </div>
                 </div>
@@ -72,13 +72,14 @@
                     <h2>I am a Web Developer</h2>
                     <p>I have experience in designing user-centered web pages, as well as developing both front-end and back-end solutions.</p>
                     <div class="links-container" data-gallery="2">
-                        <a data-image="">User Centered Design</a>
-                        <a data-image="">HTML, CSS and JavaScript</a>
-                        <a data-image="">Data bases and php</a>
+                        <a data-image="img/hci7.png" href="pages/hci.html">User Centered Design</a>
+                        <a data-image="img/hci7.png" href="#">Work in progress…</a>
+                        <!--<a data-image="">HTML, CSS and JavaScript</a>-->
+                        <!--<a data-image="">Data bases and php</a>-->
                     </div>
                 </div>
                 <div class="right-column">
-                    <img id="display-image2" src="" alt="Display 1" />
+                    <img id="display-image2" src="img/hci7.png" alt="Display 1" />
                 </div>
             </div>
             <div id="section4" class="content">
